--- a/src/styles.css
+++ b/src/styles.css
@@ -23,7 +23,7 @@ span {
     gap: 0.5rem;
     padding: 0;
     margin: 0;
-    background-color: whitesmoke;
+    background-color: rgb(77 232 167);
     padding-left: 10px;
 }
 
