--- a/src/styles.css
+++ b/src/styles.css
@@ -81,7 +81,7 @@ span {
     display: grid;
     grid-template-columns: 1fr .2fr;
     grid-auto-flow: row;
-
+    gap: 1em;
 }
 
 .tasks {
@@ -95,6 +95,6 @@ span {
 .timeAndCategory{
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: flex-end;
     align-items: center;
 }
