--- a/src/styles.css
+++ b/src/styles.css
@@ -139,3 +139,49 @@ span {
     grid-column: 1 / -1;
     
 }
+
+.settingslayout {
+    height: 100%;
+    width: 100%;
+    margin: 3rem;
+    grid-row: 1 / -1;
+    grid-column: 1 / -1;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 0.2fr 1fr;
+    grid-auto-flow: column;
+    gap: 2em;
+}
+
+.settingsTitles{
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 0.1fr 0.1fr;
+    grid-auto-flow: row;
+    gap: 2em;
+}
+
+.settingsBox{
+    grid-column: 1 / 3;
+    grid-row: 2;
+    display: grid;
+    grid-template-columns: repeat(2, .25fr);
+    grid-template-rows: repeat(4, .25fr);
+}
+
+.setting {
+    font-size: 1em;
+    font-weight: lighter+100;
+}
+
+.saveSettings {
+    grid-row: -1;
+    height: 3em;
+    width: 8rem;
+}
+
+.tinyLine{
+    height: 1px;
+    width: 100%;
+    color: black;
+}
